--- a/_posts/0000-01-02-Gofer93.md
+++ b/_posts/0000-01-02-Gofer93.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Hi there!
+I'm glad I've started a programming, it's awesome!
 Use the left arrow to go back!
